--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>IMC</title>
 </head>
 <body>
-    
+    <section class="container">
+        <h1>Calcule seu IMC</h1>
+        <div class="paragraphs">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>Repellendus nisi explicabo saepe voluptatibus consequuntur et corporis</p>
+            <p>maxime quos, doloribus vitae voluptatum quisquam necessitatibus</p>
+            <p>pariatur veritatis exercitationem beatae officiis suscipit Ea!</p>
+        </div>
+    </section>
+
+    <script src="./assets/main.js"></script>
 </body>
 </html>
